Tests/Resources/Bad/ERROR_AMBIGUOUS_THROW_TYPE/simple_throw.st
language core;

extend with #exceptions, #structural-subtyping;

fn main(n : Nat) -> Nat {
  return (fn (n : Nat) {return throw(0)}) (0)
}